# XPlatformServer

./: README.md  kill_server.bat  kill_server.sh  start_robot.bat  start_server.bat  start_server.sh
res/games/test/: test.ini
res/server/: server.ini
res/server/log4cxx_configs/: connector.properties  dbmgr.properties  directory.properties  halls.properties  hallsmgr.properties  login.properties  machine.properties  robot.properties  room.properties  roommgr.properties
src/: CMakeLists.txt
src/libs/common/: CMakeLists.txt  common.cpp  common.h  singleton.h  threadpool.h
src/libs/event/: CMakeLists.txt  EventDispatcher.cpp  EventDispatcher.h  NetworkInterface.cpp  NetworkInterface.h  Session.cpp  Session.h  TcpSocket.cpp  TcpSocket.h  Timer.cpp  Timer.h  common.h
src/libs/log/: CMakeLists.txt  XLog.cpp  XLog.h
src/libs/protos/: CMakeLists.txt  Commands.pb.cc  Commands.pb.h  Commands.proto  ServerCommon.pb.cc  ServerCommon.pb.h  ServerCommon.proto
src/libs/resmgr/: CMakeLists.txt  ResMgr.cpp  ResMgr.h
src/libs/server/: CMakeLists.txt  ConnectorFinder.cpp  ConnectorFinder.h  ServerMgr.cpp  ServerMgr.h  XServerBase.cpp  XServerBase.h
src/servers/connector/: CMakeLists.txt  XNetworkInterface.cpp  XServerApp.cpp  XServerApp.h  XSession.cpp  XSession.h  main.cpp
src/servers/dbmgr/: CMakeLists.txt  Database.cpp  Database.h  Table.cpp  Table.h  Table_Accounts.cpp  Table_Accounts.h  Table_Onlines.cpp  Table_Onlines.h  Table_PlayerGameData.cpp  Table_PlayerGameData.h  XServerApp.cpp  XServerApp.h  XSession.cpp  XSession.h  main.cpp
src/servers/directory/: CMakeLists.txt  XServerApp.cpp  XServerApp.h  XSession.cpp  XSession.h  main.cpp
src/servers/halls/: CMakeLists.txt  Room.cpp  Room.h  XNetworkInterface.cpp  XObject.cpp  XObject.h  XPlayer.cpp  XPlayer.h  XServerApp.cpp  XServerApp.h  XSession.cpp  XSession.h  main.cpp
src/servers/hallsmgr/: CMakeLists.txt  XNetworkInterface.cpp  XServerApp.cpp  XServerApp.h  XSession.cpp  XSession.h  main.cpp
src/servers/login/: CMakeLists.txt  XServerApp.cpp  XServerApp.h  XSession.cpp  XSession.h  main.cpp
src/servers/machine/: CMakeLists.txt  XServerApp.cpp  XServerApp.h  XSession.cpp  XSession.h  main.cpp
src/servers/robot/: CMakeLists.txt  XNetworkInterface.cpp  XRobot.cpp  XRobot.h  XServerApp.cpp  XServerApp.h  XSession.cpp  XSession.h  main.cpp
src/servers/roommgr/: CMakeLists.txt  XNetworkInterface.h  XServerApp.cpp  XServerApp.h  XSession.cpp  XSession.h  main.cpp
